stylesheets links was modified

--- a/catalog-page.html
+++ b/catalog-page.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог товаров | ByHerOwn</title>
-    <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/project.css">
 </head>
 <body>
    <header>
          <div class="inner-container clearfix">
              <div class="logo-section">
-                 <a href="index.html" class="logo-text"><img src="images/logo.png" alt="Логотип"><span>byherown</span></a>
+                 <a href="index.html" class="logo-text"><img src="app/images/logo.png" alt="Логотип"><span>byherown</span></a>
              </div>
                <ul class="menu-container">
                    <li><a href="catalog-page.html">Каталог</a></li>
