--- a/contacts-page.html
+++ b/contacts-page.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Магазин верхней одежды</title>
-    <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/project.css">
 </head>
 <body>
     <header>
