--- a/item-page3.html
+++ b/item-page3.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Страница товара</title>
-    <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/project.css">
 </head>
 <body>
    <header>
